# cortex

./: .gitignore  Dockerfile  README.md  diagram.mermaid  docker-compose.yml  intelligent_agent_demo.py  pyproject.toml
cortex/: __init__.py
cortex/api/: __init__.py  app.py  dependencies.py  mcp_routes.py  models.py  startup.py
cortex/core/: api_utils.py  auth.py  github_utils.py  intelligent_agent.py  litellm.py  logger.py  mcp_base_service.py  queue_service.py  user_agent.py
cortex/core/database/: __init__.py  manager.py  mcp_service.py  models.py
cortex/mcp/: __init__.py  github_server.py  server_runner.py
docker/mcp-server/: Dockerfile
scripts/: scale-mcp-servers.sh  start-individual-servers.sh
