[project]
name = "cortex"
version = "0.1.0"
description = "Coordinating agentic workflows across your MCP universe"
authors = [
    {name = "drowolath",email = "thomas@ayih-akakpo.org"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
