[project]
name = "cortex"
version = "0.1.0"
description = "Coordinating agentic workflows across your MCP universe"
authors = [
    {name = "drowolath",email = "thomas@ayih-akakpo.org"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "ipython (>=9.4.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
