[project]
name = "cortex"
version = "0.1.0"
description = "Coordinating agentic workflows across your MCP universe"
authors = [
    {name = "drowolath",email = "thomas@ayih-akakpo.org"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "ipython (>=9.4.0,<10.0.0)",
    "litellm (>=1.74.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "asyncpg (>=0.29.0,<0.30.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "bcrypt (>=4.0.0,<5.0.0)",
    "sqlalchemy-ext (>=0.2,<0.3)",
    "greenlet (>=3.2.3,<4.0.0)",
    "mcp[cli] (>=1.0.0,<2.0.0)",
    "httpx (>=0.27.0,<0.29.0)",
    "redis (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
